--- a/root/pages/benchsalesreg.html
+++ b/root/pages/benchsalesreg.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Fifo home page</title>
+    <title>Fifo bench sales page</title>
       <link rel="icon" href="../Favicon/favicon.ico">
       <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../css/trainingreg.css">
+    <link rel="stylesheet" href="../css/benchsalesreg.css">
   </head>
   <body>
     <header>
@@ -23,7 +23,7 @@
        <div class="collapse navbar-collapse"></div>
        <div class="collapse navbar-collapse" id="navbarSupportedContent"><!--navbarMenu">-->
          <ul class="navbar-nav ml-auto">
-           <li class="nav-item">
+           <li class="nav-item active">
               <a href="index.html" class="nav-link">Home</a>
            </li>
            <li class="nav-item">
@@ -46,105 +46,45 @@
               <a href="contactus.html" class="nav-link">Contact us</a>
            </li>
          </ul>
-
-           <a href="#" target="_blank"><i class="fa fa-user emp"></i></a>
-
-       </div>
+          <a href="#" target="_blank"><i class="fa fa-user emp"></i></a>
+        </div>
       </nav>
     </header>
-
-
-<!--section-->
-<section id="tform">
-   <div class="container">
-     <h2>Registration Form</h2>
-     <form class="login_form" id="form" action="success.html" method="post" name="form" onsubmit="return validated()">
-       <div class="row100">
-        <div class="col">
-          <div class="inputBox">
-             <input autocomplete="off" type="text" name="fname"  id="fname" required="required" placeholder="First name">
-             <div id="fname_error">Please enter the first name</div>
-             <span class="line"></span>
-
-          </div>
+  <main>
+  <section>
+    <div class="wrapper">
+      <h2>Benchsales signup</h2>
+      <div id="error_message"></div>
+      <form id="myform" action="success.html" method="post" onsubmit="return validate();">
+        <div class="input_field">
+            <input type="text" placeholder="Name" id="name">
         </div>
-        <div class="col">
-          <div class="inputBox">
-            <input autocomplete="off" type="text" name="lname" id="lname" required="required" placeholder="Last name">
-            <div id="lname_error">Please enter the last name</div>
-            <span class="line"></span>
-          </div>
+        <div class="input_field">
+            <input type="text" placeholder="Email" id="email">
         </div>
-       </div>
-       <div class="row100">
-          <div class="col">
-            <div class="inputBox">
-               <input autocomplete="off" type="email" name="email" id="email" required="required" placeholder="E-mail">
+        <div class="input_field">
+            <input type="text" placeholder="Company name" id="cname">
+        </div>
+        <div class="input_field">
+            <input type="text" placeholder="Phone" id="phone">
+        </div>
+        <div class="input_field">
 
-               <div id="email_error">Please enter email address</div>
-               <span class="line"></span>
-            </div>
-          </div>
-          <div class="col">
-            <div class="inputBox">
-              <input autocomplete="off" type="number" name="contact" required="required" placeholder="Phone number*">
-              <div id="contact_error">Please enter valid phone number</div>
-              <span class="line"></span>
-            </div>
-          </div>
-       </div>
-       <div class="row100">
-          <div class="col">
-            <div class="inputBox">
-               <input autocomplete="off" type="text" name="technology" required="required" placeholder="Technology">
-               <div id="technology_error">Please enter technology</div>
-               <span class="line"></span>
-            </div>
-          </div>
-          <div class="col">
-           <div class="inputBox">
-            <input autocomplete="off" type="number" name="experience" required="required" placeholder="Experience">
-            <div id="experience_error">Please enter your experience</div>
-            <span class="line"></span>
-           </div>
-          </div>
-       </div>
-       <div class="row100">
-          <div class="col">
-            <div class="inputBox">
-               <input autocomplete="off" type="text" name="password" required="required" placeholder="Password">
-               <div id="password_error">Please enter Password</div>
-               <span class="line"></span>
-            </div>
-          </div>
-          <div class="col">
-           <div class="inputBox">
-            <input autocomplete="off" type="text" name="confirmpassword" required="required" placeholder="Re-enter password">
-            <div id="confirmpassword_error">Please confirm password</div>
-            <span class="line"></span>
-           </div>
+            <input type="text" placeholder="Enter Password" id="pass">
          </div>
-       </div>
-       <div class="row100">
-           <div class="col">
-              <div class="inputBox textarea">
-                <input autocomplete="off" name="description" required="required" placeholder="Description"></input>
-                 <div id="description_error">Please give some description</div>
-                <span class="line"></span>
-              </div>
-           </div>
-       </div>
-       <div class="row100">
-          <div class="col">
-           <input id="bt" type="submit" value="Submit">
-          </div>
-       </div>
-     </form>
-   </div>
-   <script src="../js/trainingreg.js"></script>
+         <div class="input_field">
 
-</section>
-
+            <input type="text" placeholder="Confirm password" id="cpass">
+         </div>
+           <p>If already a member? <a href="login.html">Please login.</a></p>
+        <div class="btn">
+            <input type="submit">
+        </div>
+      </form>
+    </div>
+     <script src="../js/benchsalesreg.js"></script>
+  </section>
+</main>
 
 <!--footer-->
     <footer class="footer-distributed">
