--- a/root/pages/careers.html
+++ b/root/pages/careers.html
@@ -9,55 +9,49 @@
       <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <<link rel="stylesheet" href="../css/careers.css">
+    <link rel="stylesheet" href="../css/careers.css">
   </head>
   <body>
-   <header>
-     <nav class="navbar fixed-top navbar-expand-lg navbar-light">
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light"><!-- fixed-top-->
       <a href="index.html" class="navbar-brand ml-3">Fifo<span style="color:#0008E8;">solutions</span></a>
-    <!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle Navigation">-->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-         <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse"></div>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-             <a href="index.html" class="nav-link">Home</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Services
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="staffing.html">IT staffing & consulting</a>
-              <a class="dropdown-item dropright" href="training.html">Training</a>
-            </div>
+      <!--<a href="index.html" class="navbar-brand ml-3"><img src="../images/fifo logo.png" class="logo" alt=""></a>-->
+     <!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle Navigation">-->
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+       </button>
+       <div class="collapse navbar-collapse"></div>
+       <div class="collapse navbar-collapse" id="navbarSupportedContent"><!--navbarMenu">-->
+         <ul class="navbar-nav ml-auto">
+           <li class="nav-item">
+              <a href="index.html" class="nav-link">Home</a>
+           </li>
+           <li class="nav-item">
+              <a href="aboutus.html" class="nav-link">About us</a>
+           </li>
+           <li class="nav-item dropdown">
+             <a href="services.html" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+               Services
+             </a>
+             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+               <a class="dropdown-item" href="staffing.html">IT staffing & consulting</a>
+               <a class="dropdown-item dropright" href="training.html">Training</a>
+             </div>
 
-          </li>
-          <li class="nav-item">
-             <a href="clients.html" class="nav-link">Clients</a>
-          </li>
-          <li class="nav-item dropdown">
-              <a href="jobseeker.html" class="nav-link">Job seeker</a>
-          </li>
-          <li class="nav-item active">
-             <a href="careers.html" class="nav-link">Carrers</a>
-          </li>
-          <li class="nav-item">
-             <a href="aboutus.html" class="nav-link">About us</a>
-          </li>
-          <li class="nav-item">
-             <a href="contactus.html" class="nav-link">Contact us</a>
-          </li>
-        </ul>
-      <form class="form-inline my-2 my-lg-0" action="emplogin.html" method="post">
-          <button class="btn menu-right-btn border mx-4" type="submit">Employer login
-            </button>
-       </form>
-      </div>
-     </nav>
-   </header>
+           </li>
+           <li class="nav-item active">
+              <a href="careers.html" class="nav-link">Carrers</a>
+           </li>
+           <li class="nav-item">
+              <a href="contactus.html" class="nav-link">Contact us</a>
+           </li>
+         </ul>
+
+           <a href="#" target="_blank"><i class="fa fa-user emp"></i></a>
+
+       </div>
+      </nav>
+    </header>
   <main>
     <div class="container-fluid p-0 background">
       <div class="site-content transbox">
