--- a/root/pages/login.html
+++ b/root/pages/login.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Fifo home page</title>
+    <title>Fifo contactus page</title>
       <link rel="icon" href="../Favicon/favicon.ico">
       <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../css/trainingreg.css">
+    <link rel="stylesheet" href="../css/login.css">
   </head>
   <body>
     <header>
@@ -52,99 +52,47 @@
        </div>
       </nav>
     </header>
-
-
 <!--section-->
-<section id="tform">
-   <div class="container">
-     <h2>Registration Form</h2>
-     <form class="login_form" id="form" action="success.html" method="post" name="form" onsubmit="return validated()">
-       <div class="row100">
-        <div class="col">
-          <div class="inputBox">
-             <input autocomplete="off" type="text" name="fname"  id="fname" required="required" placeholder="First name">
-             <div id="fname_error">Please enter the first name</div>
-             <span class="line"></span>
 
-          </div>
+  <section>
+    
+    <div class="row">
+         <h1>Welcome to fifosolutions</h1>
+      <div class="wrapper">
+
+      <div class="form">
+        <div class="title">
+          Login
         </div>
-        <div class="col">
-          <div class="inputBox">
-            <input autocomplete="off" type="text" name="lname" id="lname" required="required" placeholder="Last name">
-            <div id="lname_error">Please enter the last name</div>
-            <span class="line"></span>
-          </div>
-        </div>
-       </div>
-       <div class="row100">
-          <div class="col">
-            <div class="inputBox">
-               <input autocomplete="off" type="email" name="email" id="email" required="required" placeholder="E-mail">
 
-               <div id="email_error">Please enter email address</div>
-               <span class="line"></span>
+        <form method="post" action="success.html" onsubmit="return validation();">
+          <div class="input_wrap">
+            <label for="input_text">Email</label>
+            <div class="input_field">
+              <input type="email" autocomplete="off" placeholder="Enter email" class="input" id="input_text">
             </div>
           </div>
-          <div class="col">
-            <div class="inputBox">
-              <input autocomplete="off" type="number" name="contact" required="required" placeholder="Phone number*">
-              <div id="contact_error">Please enter valid phone number</div>
-              <span class="line"></span>
+          <div class="input_wrap">
+            <label for="input_password">Password</label>
+            <div class="input_field">
+              <input type="password" autocomplete="off" placeholder="Enter password" class="input" id="input_password">
             </div>
           </div>
-       </div>
-       <div class="row100">
-          <div class="col">
-            <div class="inputBox">
-               <input autocomplete="off" type="text" name="technology" required="required" placeholder="Technology">
-               <div id="technology_error">Please enter technology</div>
-               <span class="line"></span>
-            </div>
+          <div class="input_wrap">
+            <span class="error_msg">Incorrect Email or password. Please try again</span>
+            <input type="submit" id="login_btn" class="btn disabled" value="Login" disabled="true">
           </div>
-          <div class="col">
-           <div class="inputBox">
-            <input autocomplete="off" type="number" name="experience" required="required" placeholder="Experience">
-            <div id="experience_error">Please enter your experience</div>
-            <span class="line"></span>
+          <div class="form-group form-check">
+                <a href="">Forgot Password?</a>
+                <h2>Don't have an account?<a href="trainingreg.html">Register Now</a></h2>
            </div>
-          </div>
-       </div>
-       <div class="row100">
-          <div class="col">
-            <div class="inputBox">
-               <input autocomplete="off" type="text" name="password" required="required" placeholder="Password">
-               <div id="password_error">Please enter Password</div>
-               <span class="line"></span>
-            </div>
-          </div>
-          <div class="col">
-           <div class="inputBox">
-            <input autocomplete="off" type="text" name="confirmpassword" required="required" placeholder="Re-enter password">
-            <div id="confirmpassword_error">Please confirm password</div>
-            <span class="line"></span>
-           </div>
-         </div>
-       </div>
-       <div class="row100">
-           <div class="col">
-              <div class="inputBox textarea">
-                <input autocomplete="off" name="description" required="required" placeholder="Description"></input>
-                 <div id="description_error">Please give some description</div>
-                <span class="line"></span>
-              </div>
-           </div>
-       </div>
-       <div class="row100">
-          <div class="col">
-           <input id="bt" type="submit" value="Submit">
-          </div>
-       </div>
-     </form>
-   </div>
-   <script src="../js/trainingreg.js"></script>
+        </form>
+      </div>
+    </div>
+  </div>
+    <script src="../js/login.js"></script>
 
-</section>
-
+  </section>
 
 <!--footer-->
     <footer class="footer-distributed">
@@ -183,5 +131,5 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-</body>
-</html>
+ </body>
+ </html>
