--- a/root/pages/aboutus.html
+++ b/root/pages/aboutus.html
@@ -6,17 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Fifo aboutuspage</title>
     <link rel="icon" href="../Favicon/favicon.ico">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <!--  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/aboutus.css">
   </head>
   <body>
  <header>
-       <nav class="navbar navbar-expand-lg navbar-light"><!-- fixed-top-->
-       <a href="index.html" class="navbar-brand ml-3">Fifo<span style="color:#0008E8;">solutions</span></a>
-       <!--<a href="index.html" class="navbar-brand ml-3"><img src="../images/fifo logo.png" class="logo" alt=""></a>-->
-      <!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle Navigation">-->
+       <nav class="navbar navbar-expand-lg navbar-light "><!-- fixed-top-->
+          <a href="index.html" class="navbar-brand ml-3"><img src="../images/output-onlinepngtools.png" class="logo" alt="" style="width:130px;height:75px;float:left;"></a>
+       <!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle Navigation">-->
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
            <span class="navbar-toggler-icon"></span>
         </button>
@@ -47,11 +46,12 @@
             </li>
           </ul>
 
-            <a href="#" target="_blank"><i class="fa fa-user emp"></i></a>
+            <a href="login.html" target="_blank"><i class="fa fa-user emp"></i></a>
            </form>
         </div>
        </nav>
      </header>
+  <!--section-->
   <main>
     <div class="container-fluid p-0">
       <div class="site-content">
@@ -62,8 +62,21 @@
         </div>
        </div>
    </div>
+  <!--section-->
+  <div class="section-2">
+    <div class="container-fluid">
+      <div class="d-flex justify-content-start">
+        <div class="d-flex flex-column m-4">
+          <h1 class="heading-1 d-flex justify-content-center">Welcome to Fifo Solutions</h1>
+
+          <p class="para text-secondary">Fifo solutions is a focused technology consulting company.We have engaged with a lot of clients in creating strategy, implementing, deploying, and supporting a wide range of solutions for clients. Our clients include a diversified set of Fortune 500, free essay example mid-sized and startup companies. They rely on us to provide them with timely, high-quality work and they return to us because we're reliable, experienced and easy to work with.
+            FIFO solutions is an expert in providing training for learning various software, hardware and networking. IT courses which has good employment opportunities are designed and offered by globally certified trainers. Internship training with live and real-time projects is provided with the training course.</p>
+         </div>
+       </div>
+     </div>
+   </div>
   <!--section1-->
-  <div class="section-1">
+<!--  <div class="section-1">
     <div class="container-fluid">
       <div class="d-flex justify-content-start">
         <div class="d-flex flex-column m-4">
@@ -92,11 +105,66 @@
           </div>
         </div>
      </div>
-   </div>
+   </div>-->
 
 
    <!--section2-->
     <div class="section2 bg-light">
+      <div class="container-fluid">
+        <div class="row founder">
+           <div class="col-sm-7">
+             <h1 class="text-center heading">Our company overview</h1>
+             <p class="para text-secondary"> Fifosolutions has been helping to connect teck talent with tech companies. We deliver best-in class solutions to serve cients needs. We strongly believe in higher standards of values - commitment integrity and strong focus toweards results. All the values helps us to deliver on outstanging value to our clients and customer.
+                  </p>
+             <p class="para text-secondary">Technologies is dedicated to maintaining and improving your information technology
+                system’s productivity and efficiency, and providing you with quality, flexibility and security.
+                 Our client centric focus and services are designed to help you with your business needs and maximize
+                 your operational performance.  We are here to help you, anytime and anywhere.Technologies is also bringing the same
+                  level IT experience available to fortune companies to the local Small and Medium Businesses under the brand MyTecq.com.</p>
+           </div>
+           <div class="col-sm-5">
+             <div class="img-wrap">
+               <img src="../images/pexels-christina-morillo-1181304.jpg" alt="">
+             </div>
+           </div>
+         </div>
+      </div>
+    </div>
+    <!--section-->
+    <section id="features">
+      <div class="title-text">
+        <h1>Our values</h1>
+      </div>
+      <div class="features-box">
+        <div class="features">
+          <h1>Mission</h1>
+          <div class="features-desc">
+            <!--<div class="features-icon">
+              <i class="fa fa-shield"></i>
+            </div>-->
+            <div class="features-text">
+              <p>Our mission is to deliver the best and to exceed the expectations of our clients by means of providing the right solution. "we succeed when clients succed.
+                </div>
+          </div>
+          <h1>Vision</h1>
+          <div class="features-desc">
+            <!--<div class="features-icon">
+              <i class="fa fa-check-square-o"></i>
+            </div>-->
+            <div class="features-text">
+              <p>Wherever you desire to go, we give you the tools, the techniques, and the teams to navigate
+                the journey. So you’re inspired to build.s</p>
+            </div>
+          </div>
+        </div>
+        <div class="features-img">
+          <img src="../images/pexels-fauxels-3184431.jpg" alt="">
+        </div>
+      </div>
+    </section>
+
+    <!--copysection-->
+    <!--<div class="section2 bg-light">
       <div class="container-fluid">
         <div class="row founder">
            <div class="col-sm-7">
@@ -119,9 +187,9 @@
            </div>
          </div>
       </div>
-    </div>
+    </div>-->
   <!--section3-->
-  <section class="team">
+  <!--<section class="team">
     <div class="container">
       <h1 class="teamh1">Our team</h1>
       <div class="row">
@@ -171,9 +239,9 @@
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
 <!--section 4-->
-<div class="bg-light container-fluid">
+<!--<div class="bg-light container-fluid">
   <div class="partners">
      <h2 class="text-center text-dark">Our valued partners</h2>
   </div>
@@ -189,7 +257,7 @@
      <i class="fab fa-redhat"><span id="red">Red Hat</span></i>
      <i class="fab fa-atlassian">ATLASSIAN</i>
    </div>
- </div>
+ </div>-->
   <!--footer-->
     <footer class="footer-distributed">
         <div class="footer-left ">
