--- a/root/pages/benchsalesreg.html
+++ b/root/pages/benchsalesreg.html
@@ -46,7 +46,7 @@
               <a href="contactus.html" class="nav-link">Contact us</a>
            </li>
          </ul>
-          <a href="#" target="_blank"><i class="fa fa-user emp"></i></a>
+          <a href="login.html" target="_blank"><i class="fa fa-user emp"></i></a>
         </div>
       </nav>
     </header>
