--- a/root/pages/staffing.html
+++ b/root/pages/staffing.html
@@ -47,7 +47,7 @@
            </li>
          </ul>
 
-           <a href="#" target="_blank"><i class="fa fa-user emp"></i></a>
+           <a href="login.html" target="_blank"><i class="fa fa-user emp"></i></a>
 
        </div>
       </nav>
@@ -75,14 +75,9 @@
       <div class="d-flex flex-column m-4">
         <h1 class="heading-1">Our IT Staffing Services</h1>
         <h3>IT staffing augmentation</h3><!--heading-1 para-->
-        <p class="para text-secondary">Resolute can boost your current IT personnel with a wide range of professional skill sets designed to help augment your current IT operations. Our staffing augmentation solutions can provide both short-term and long-term assistance to meet your needs.Fifosolutions is a leading provider of services and solutions to clients across the United States and globally. Many of these clients are large national and international organizations.
-          Organizations need individuals with cloud skills to help transform their business.
-           Our content is built by experts at fifo and updated regularly to keep pace with fifo updates, so you
-           can be sure you’re learning the latest and keeping your cloud skills fresh.Organizations need individuals with cloud skills to help transform their business.
-               Training and Certification helps you build and validate your cloud skills so you can get more out of the cloud.
-              Our content is built by experts at AWS and updated regularly to keep pace with updates, so you
-              can be sure you’re learning the latest and keeping your cloud skills fresh
-            you be more effective and do more in the cloud.</p>
+        <p class="para text-secondary">Advithri Technologies is the best US IT staffing services and Solution Company also is a registered business enterprise. We are an assumption company of IT staffing services or solutions to source effective, competent, skillful IT staff in a wide range of sectors as customers need across the globe.
+
+Our objective is to have a real collaboration with your company and become extra time for Human Resources. We understand your competitive niche markets, dealing with each of our clients/customers individually, and concentrating on their unique needs. Our IT staffing experts perform a customized evaluation for perceptive skills to come up with the right candidature. We also handle the temporary workforce staffing and we are more than happy to assist you..</p>
            <h3>Our IT Staffing services include:</h3>
            <p class="para text-secondary"><strong>Project managers:</strong> Fully certified experts who can help manage your projects and ensure on time delivery.
               When you need personnel you can trust to drive your project to completion, our project managers are ready to provide the leadership to get the
@@ -98,7 +93,7 @@
 
 
              <h1 class="heading-1">IT consulting services</h1>
-             <p class="para text-secondary">Information technology is always evolving and having access to industry guidance and expert knowledge is crucial to helping you reach your business goals. You need IT consulting services you can trust to ensure your technology base is as efficient and effective as possible.</h3>
+             <p class="para text-secondary">Our consulting services involve a wide range of services like Business Intelligence, Big Data Analytics, SAP Practice, and Staff Augmentation. Our management consulting services focus on our clients' most critical issues and opportunities: strategy, marketing, organization, operations, technology, transformation, digital, advanced analytics, corporate finance, mergers & acquisitions and sustainability across all industries and geographies Being the global IT solutions and Consulting services and Staff Augmentation company, we have a panel of senior IT professionals working on niche skills and cutting edge technologies to screen the candidates on different technology domains. Advithri Services have a high intensity of talented and experienced professionals with a proven track record of improvements and succession in those improvements. Mobilizing the right resources at the right time so as to identify the opportunities and its standards thereof achieving those standards with superior quality offers strategic and operational initiatives.Information technology is always evolving and having access to industry guidance and expert knowledge is crucial to helping you reach your business goals. You need IT consulting services you can trust to ensure your technology base is as efficient and effective as possible.</h3>
               <h3>IT management consultancy</h3>
              <p class="para text-secondary">Fifosolutions is a leading provider of services and solutions to clients across the United States and globally. Many of these clients are large national and international organizations.
                Organizations need individuals with cloud skills to help transform their business.</p>
