--- a/root/pages/addconsultant.html
+++ b/root/pages/addconsultant.html
@@ -13,16 +13,52 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light"><!-- fixed-top-->
-      <a href="index.html" class="navbar-brand ml-3">Fifo<span style="color:#0008E8;">solutions</span></a>
+      <nav class="navbar navbar-expand-md navbar-dark ">
+         <a href="index.html" class="navbar-brand ml-3"><img src="../images/output-onlinepngtools.png" class="logo" alt="" style="width:130px;height:75px;float:left;"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+         <div class="collapse navbar-collapse"></div>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="aboutus.html">About</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" role="button" data-toggle="dropdown">services</a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                 <a class="dropdown-item" href="staffing.html">IT staffing & consulting</a>
+                 <div class="dropdown-divider"></div>
+                 <a class="dropdown-item" href="training.html">Training</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="careers.html">Carrers</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="contactus.html">contact us</a>
+            </li>
+          </ul>
+            <a href="login.html" target="_blank"><i class="fa fa-user emp"></i></a>
+        </div>
+      </nav>
+
+
+
+    <!--  <nav class="navbar navbar-expand-lg navbar-light"><!-- fixed-top-->
+      <!--<a href="index.html" class="navbar-brand ml-3">Fifo<span style="color:#0008E8;">solutions</span></a>
       <!--<a href="index.html" class="navbar-brand ml-3"><img src="../images/fifo logo.png" class="logo" alt=""></a>-->
      <!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle Navigation">-->
-         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
        </button>
        <div class="collapse navbar-collapse"></div>
        <div class="collapse navbar-collapse" id="navbarSupportedContent"><!--navbarMenu">-->
-         <ul class="navbar-nav ml-auto">
+        <!-- <ul class="navbar-nav ml-auto">
            <li class="nav-item">
               <a href="index.html" class="nav-link">Home</a>
            </li>
@@ -47,10 +83,10 @@
            </li>
          </ul>
 
-           <a href="#" target="_blank"><i class="fa fa-user emp"></i></a>
+           <a href="login.html" target="_blank"><i class="fa fa-user emp"></i></a>
           </form>
        </div>
-      </nav>
+     </nav>-->
     </header>
   <main>
     <section>
