--- a/root/pages/careers.html
+++ b/root/pages/careers.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light"><!-- fixed-top-->
+      <nav class="navbar navbar-expand-lg"><!-- fixed-top-->
       <a href="index.html" class="navbar-brand ml-3">Fifo<span style="color:#0008E8;">solutions</span></a>
       <!--<a href="index.html" class="navbar-brand ml-3"><img src="../images/fifo logo.png" class="logo" alt=""></a>-->
      <!--  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle Navigation">-->
@@ -47,7 +47,7 @@
            </li>
          </ul>
 
-           <a href="#" target="_blank"><i class="fa fa-user emp"></i></a>
+           <a href="login.html" target="_blank"><i class="fa fa-user emp"></i></a>
 
        </div>
       </nav>
@@ -68,7 +68,7 @@
      <div class="container-fluid">
        <div class="d-flex justify-content-start">
          <div class="d-flex flex-column m-4">
-           <h1 class="heading-1">Careers</h1>
+           <h1 class="heading-1 d-flex justify-content-center">CAREER COUNSELLING</h1>
            <h3>What We Do..</h3><!--heading-1 para-->
            <p class="para text-secondary">Fifosolutions is a leading provider of services and solutions to clients across the United States and globally. Many of these clients are large national and international organizations.
              Organizations need individuals with cloud skills to help transform their business.
@@ -76,28 +76,26 @@
               can be sure you’re learning the latest and keeping your cloud skills fresh.Organizations need individuals with cloud skills to help transform their business.
                   Training and Certification helps you build and validate your cloud skills so you can get more out of the cloud.
                  Our content is built by experts at AWS and updated regularly to keep pace with updates, so you
-                 can be sure you’re learning the latest and keeping your cloud skills fresh.<br><br>
-               We offer both digital and classroom training. Digital training allows you to learn online at your own pace. With classroom training,
-                  learn best practices from an expert instructor. In addition to in-person classes, virtual training lets you take courses from anywhere. Whether you are just
-                  starting out, building on existing IT skills, or sharpening your cloud knowledge, AWS Training and Certification can help you be more effective and do more in the cloud.</p>
-              <h3>IT & other positions</h3>
-              <p class="para text-secondary">Are you ready to make a career change in a rapidly growing industry? We are always looking
-                 for top talent to join the fifo team! New opportunities emerge each day with our IT Professional Services
-                 and IT Solutions Division, as well as other departments.Develop and deploy your applications to the cloud with the help
-                 of industry-leading consulting team. Whether you have a collection of existing applications or on the lookout
-                  to implement your first, our team can architect the ultimate solution with the reliability and scaling capabilities of
-                  new Cloud Native technologies.</p>
+                 can be sure you’re learning the latest and keeping your cloud skills fresh.</p>
+               <h3>Career Counseling Services</h3>
+              <p class="para text-secondary">There is a good deal of career counseling services for young people. The careers advice service is very beneficial for these youngsters to select and establish their careers. At Advithri Technologies., we are providing career guidance to students and young people to select the right career and be established in life. If you are looking for a career change, job-hunting advice or mentoring then we can make your search a bit easier. Advithri Technologies is a professional career consultant and consulting services provider to clients all over the world with over 5 years of experience in the field..</p>
+              <h3>New career paths</h3><!--heading-1 para-->
+              <p class="para text-secondary">The traditional paths of career are always there. In the current times; many new career options have developed. Many people are just not aware of them. Even if they are aware, people are not confident in pursuing them. Yet, many of these new career streams are very promising. It is the duty of the counselors to show them the light. These people can show ways to pursue these new paths and the opportunities that lie across them. Normally most of the general people are afraid to tread new paths..</p>
+
                   <h5>Ready to explore a career from FifoSolutions? Just click on the below button to register as a job seeker..</h5>
                   <form class="form-inline" action="trainingreg.html" method="post">
                       <button class="btn bg-success" type="submit">Register now</button>
                    </form>
-                <h4><a class="anchor" href="">Click here to see the job opportunities.</a></h4>
+                <!--<h4><a class="anchor" href="">Click here to see the job opportunities.</a></h4>-->
                 <h1 class="heading-1">Benifits</h1>
                 <h3>We care about our consultants</h3>
                 <p class="para text-secondary">Fifosolutions is a leading provider of services and solutions to clients across the United States and globally. Many of these clients are large national and international organizations.
                   Organizations need individuals with cloud skills to help transform their business.</p>
                 <h3>Equal Employment Opportunity</h3>
                 <p class="para text-secondary">We will provide job, training  all terms and conditions of consultant without regard to their race, color, religion, national origin, gender identity, age, protected veteran status, disability, or other protected categories under the applicable law.</p>
+                <h3>Why is FIFO Solutions? Good at Career Counseling?</h3><!--heading-1 para-->
+                <p class="para text-secondary">Career counseling may sound like a simple task or job to perform, but the reality is quite different. Several people may argue that they are the best career counselor for their family because of their wisdom and experience. However, the truth is quite different. Career Counseling indeed needs to be based on the talent and abilities of an individual; however, several other real-world factors that need to be taken into consideration along with the current trends..</p>
+
           </div>
         </div>
       </div>
