--- a/root/pages/index -magic.html
+++ b/root/pages/index -magic.html
@@ -13,14 +13,13 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-  
-
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/styles-magic.css">
   </head>
   <body>
    <header>
-     <nav class="navbar navbar-expand-lg "><!-- fixed-top navbar-light-->
+     <nav class="navbar navbar-expand-lg navbar-light"><!-- fixed-top-->
      <!--<a href="index.html" class="navbar-brand ml-3">Fifo<span style="color:#0008E8;">solutions</span></a>-->
      <a href="index.html" class="navbar-brand ml-3"><img src="../images/output-onlinepngtools.png" class="logo" alt="" style="width:130px;height:75px;float:left;"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle Navigation">
@@ -60,37 +59,7 @@
      </nav>
    </header>
    <main>
-     <div class="slide-container">
-       <div class="slide-box" style="background-image: url('../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg');">
-
-         <div class="slide-box-containt">
-            <h2>Success usually comes to those who are too busy to be looking for it</h2>
-            <!--<p>Founded in 2002, Q1 is a result-oriented information technology and professional
-               services company that focuses on helping our clients increase efficiency and reduce cost
-               through quality solutions that are flexible and secure. We are a leader in providing real
-               value and expertise in integrated information technology solutions with proven success.  Our world
-                class services and solutions keep your company moving forward</p>-->
-         </div>
-       </div>
-       <div class="slide-box" style="background-image:url('../images/pexels-oleg-magni-2058130.jpg');">
-
-         <div class="slide-box-containt">
-            <h2>Welcome to Fifo solutions</h2>
-            <p>Here you can turn your passion into your career.</p>
-         </div>
-       </div>
-       <div class="slide-box" style="background-image:url('../images/pexels-christina-morillo-1181304.jpg');">
-
-         <div class="slide-box-containt">
-            <h2>WE will provide you the job by giving training also.</h2>
-             </div>
-       </div>
-     </div>
-
-
-
-
-     <!--<div class="container-fluid p-0">
+     <div class="container-fluid p-0 panel" data-color="white">
        <div class="site-content">
          <div class="d-flex justify-content-start">
            <div class="d-flex flex-column">
@@ -101,8 +70,8 @@
                     <div class="search_box">
                       <div class="search_field">
                         <input type="text" class="input" placeholder="Search by job title or type">
-                          <!--<i class="search fas fa-search"></i>-->
-                  <!--  </div>
+                          <i class="search fas fa-search"></i>
+                    </div>
                         <div class="dropdown">
                             <div class="default_option">All job types</div>
                             <ul>
@@ -123,13 +92,13 @@
 
                     </div>
                 </div>
-              <script src="../js/index.js" charset="utf-8"></script>
+              <!--<script src="../js/index.js" charset="utf-8"></script>-->
            </div>
 
          </div>
 
        </div>
-    </div>-->
+    </div>
 
   	<!--<div class="carousel slide" data-ride="carousel" id="carouselExampleIndicators" data-interval="4000">
   		<ol class="carousel-indicators">
@@ -211,10 +180,10 @@
       </div>
   </div>-->
 
-  <section id="service">
+  <section id="service" class="panel" data-color="violet">
     <div class="title-text">
       <!--<p>services</p>-->
-      <h1 class="heading-1">What we do?</h1>
+      <h1 class="heading-1">What we do</h1>
     </div>
     <div class="service-box">
       <div class="single-service">
@@ -263,22 +232,22 @@
 
 
   <!--section2-->
-    <!--<div class="section-2">
+    <div class="section-2 panel" data-color="indigo">
       <div class="container-fluid">
         <div class="d-flex justify-content-start">
           <div class="d-flex flex-column m-4">
             <h1 class="s2 heading-1 text-success">We will provide you the best training</h1>
             <p class="s2 para text-secondary"> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
-            <form class="form-inline" action="trainingreg.html" method="post">-->
+            <form class="form-inline" action="trainingreg.html" method="post">
                 <!--<input type="button" value="Join with us" class="btn btn-danger">-->
-                <!--<button class="btn bg-danger text-white" type="submit">Join with us</button>
+                <button class="btn bg-danger text-white" type="submit">Join with us</button>
             </form>
           </div>
         </div>
       </div>
-    </div>-->
+    </div>
   <!--section3-->
-    <div class="section-3">
+    <div class="section-3 panel" data-color="blue">
       <div class="container">
 
         <div class="row">
@@ -352,7 +321,7 @@
    </div>
   </div>
   <!--section4-->
-     <div class="section-4 bg-dark">
+     <div class="section-4 bg-dark panel" data-color="green">
        <div class="container">
          <div class="row">
             <div class="col-md-7">
@@ -368,80 +337,153 @@
 
        </div>
      </div>
-    <!--section-->
-    <section id="clients" class="section-bg">
-    <div class="container">
-        <div class="section-header">
-            <h3>Our CLients</h3>
-            <p>Meet our happy clients</p>
-        </div>
-        <div class="row no-gutters clients-wrap clearfix wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <div class="client-logo"> <img src="../images/Apple-02.png" class="img-fluid" alt=""> </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <div class="client-logo"> <img src="../images/Infosys_logo.png" class="img-fluid" alt=""> </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <div class="client-logo"> <img src="../images/tcs-3.png" class="img-fluid" alt=""> </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <div class="client-logo"> <img src="../images/Tech-Mahindra-01.png" class="img-fluid" alt=""> </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <div class="client-logo"> <img src="../images/pngfind.com-capgemini-logo-png-4899855.png" class="img-fluid" alt=""> </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <div class="client-logo"> <img src="../images/Microsoft-01.png" class="img-fluid" alt=""> </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <div class="client-logo"> <img src="../images/Intel-01.png" class="img-fluid" alt=""> </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
-                <div class="client-logo"> <img src="../images/cognizant-vector-logo.png" class="img-fluid" alt=""> </div>
-            </div>
-        </div>
-    </div>
-</section>
    </main>
    <!--<footer>-->
-   <footer class="footer-distributed">
-       <div class="footer-left ">
-         <h2>Address</h2>
-         <address class="address">
-          <span>21 Revolution Street<br>
-          vizag, Andhra pradesh,<br>
-          India<br>
-          +1 667 123456<br>
-           P O Box: 117537<br></span>
-          </address>
+   <div class="section-5 text-center panel" data-color="yellow">
+        <h4 style:"margin-top:25%;">Get mails from us</h4>
+        <h5 class="my-4">If you need any help</h5>
+        <div class="form-inline justify-content-center">
+          <input type="text" name="Email" id="email" placeholder="Email" size="40" class="form-control px-4 py-2">
+          <input type="button" value="contact us" class="btn btn-danger px-4 py-2">
         </div>
-       <div class="footer-center">
-        <div>
-          <h2>Contact Us</h2>
-           <p class="foot1">Telephone:+971 43206111</p><br>
-           <p class="foot1">WhatsApp: +971 552096715</p><br>
-           <p class="foot1">Email: info@fifosolutions.com</p>
-           <div class="footer-icons">
-             <a href="#"><i class="fa fa-facebook"></i></a>
-             <a href="#"><i class="fa fa-twitter"></i></a>
-             <a href="#"><i class="fa fa-linkedin"></i></a>
-             <a href="#"><i class="fa fa-github"></i></a>
+      </div>
+  <!--footer-->
+    <div class="footer-wrapper">
+    <div class="top-img"></div>
+    <div class="container-fluid">
+
+
+      <div class="footer-mid-part">
+        <div class="row">
+          <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="footer-section-one">
+              <div class="footer-heading"><h2>Contact Us</h2></div>
+               <div class="footer-contact-box">
+              <div class="footer-contact-icon"><i class="fa fa-map-marker"></i></div>
+              <div class="footer-contact-text">
+                <p>Address:21 Revolution Street<br>
+                vizag, Andhra pradesh
+                India</p>
+              </div>
+              <div class="clr"></div>
             </div>
+
+             <div class="footer-contact-box">
+              <div class="footer-contact-icon"><i class="fa fa-phone"></i></div>
+              <div class="footer-contact-text">
+                <p><a href="tel:+012-3456-789">+012-3456-789</a></p>
+              </div>
+              <div class="clr"></div>
+            </div>
+
+             <div class="footer-contact-box">
+              <div class="footer-contact-icon"><i class="fa fa-fax"></i></div>
+              <div class="footer-contact-text">
+                <p><a href="fax:+012-3456-789">+012-3456-789</a></p>
+              </div>
+              <div class="clr"></div>
+            </div>
+
+             <div class="footer-contact-box">
+              <div class="footer-contact-icon"><i class="fa fa-envelope"></i></div>
+              <div class="footer-contact-text">
+                <p><a href="mailto:people@fifosolutions.com">people@fifosolutions.com</a></p>
+              </div>
+              <div class="clr"></div>
+            </div>
+
+             <div class="footer-contact-box">
+              <div class="footer-contact-icon"><i class="fa fa-globe"></i></div>
+              <div class="footer-contact-text">
+                 <p><a href="http://www.fifosolutions.com">http://www.fifosolutions.com</a></p>
+              </div>
+              <div class="clr"></div>
+            </div>
+
+
+            </div>
+
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="footer-section-two">
+              <div class="footer-heading"><h2>Quick Link</h2></div>
+              <div class="footer-link">
+                <ul>
+                  <li><a href="#">Home</a></li>
+                   <li><a href="#">About Us</a></li>
+                    <li><a href="#">Our Services</a></li>
+
+                        <li><a href="#">Training</a></li>
+                         <li><a href="#">Contact Us</a></li>
+
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="footer-section-two">
+              <div class="footer-heading"><h2>Fifosolutions</h2></div>
+               <div class="footer-link">
+                 <p> Our journey strated in the year 2019 through our parent
+                 entity providing management consultancy services. The need
+                for a separate platform for delivering corporate services was inevitable, and Profound Business Services LLC was
+                 established.</p>
+
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="footer-section-three">
+              <div class="footer-heading"><h2>Get in touch</h2></div>
+               <div class="footer-form">
+                 <form method="post" action="#">
+                   <div class="footer-form-box">
+                     <input type="text" class="footer-form-style" placeholder="Name">
+                   </div>
+                   <div class="footer-form-box">
+                     <input type="text" class="footer-form-style" placeholder="Email">
+                   </div>
+                   <div class="footer-form-box">
+                     <input type="text" class="footer-form-style" placeholder="Phone Number">
+                   </div>
+                   <div class="footer-form-box">
+                     <input type="submit" class="footer-form-submit-style" value="SUBMIT">
+                   </div>
+                 </form>
+               </div>
+
+            </div>
+          </div>
         </div>
       </div>
-     <div class="footer-right">
-       <p class="footer-company-about"> <span>Fifo Solutions</span>
-          Our journey strated in the year 2019 through our parent
-         entity providing management consultancy services. The need
-        for a separate platform for delivering corporate services was inevitable, and Profound Business Services LLC was
-         established.</p>
+      <div class="bg">
+      <div class="footer-social-icons">
+        <ul>
+          <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
+          <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
+
+          <li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
+          <li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="#" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
+          <li><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+          </ul>
       </div>
- </footer>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+   <div class="footer-bottom">
+     <div class="row">
+       <div class="col-lg-12 col-md-12 col-sm-12">
+         <p>Copyright © 2019 Fifosolutions. All right are reserved.</p>
+       </div>
+     </div>
+   </div>
+ </div>
+
+    </div>
+  </div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-
+<script src="../js/index-magic.js" charset="utf-8"></script>
 
   </body>
 </html>
