--- a/root/pages/login.html
+++ b/root/pages/login.html
@@ -47,7 +47,7 @@
            </li>
          </ul>
 
-           <a href="#" target="_blank"><i class="fa fa-user emp"></i></a>
+           <a href="login.html" target="_blank"><i class="fa fa-user emp"></i></a>
 
        </div>
       </nav>
@@ -55,7 +55,7 @@
 <!--section-->
 
   <section>
-    
+
     <div class="row">
          <h1>Welcome to fifosolutions</h1>
       <div class="wrapper">
