--- a/root/pages/training.html
+++ b/root/pages/training.html
@@ -47,7 +47,7 @@
            </li>
          </ul>
 
-           <a href="#" target="_blank"><i class="fa fa-user emp"></i></a>
+           <a href="login.html" target="_blank"><i class="fa fa-user emp"></i></a>
 
        </div>
       </nav>
